[tool.poetry]
name = "pdf-language-detector"
version = "0.0.9"
description = "A python script to iterate over a list of PDF in a directory and try to guess their language with Tesseract OCR."
authors = ["ICIJ <engineering@icij.org>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = '^3.8.1'
pytesseract = "^0.3.10"
sh = "^2.0.4"
typer = {extras = ["all"], version = "^0.9.0"}
lingua-language-detector = "^1.3.2"
rich = "^13.4.2"
langcodes = {extras = ["data"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-mock = "^3.11.1"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore:pkg_resources is deprecated as an API',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pld = "src.cli:app"
pdf-language-detector = "src.cli:app"
